--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iBlog Responsive Blog Templet</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/utils.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/media.css"> -->
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/utils.css">
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/style.css">
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/media.css">
 </head>
 
 <body>
@@ -16,7 +19,7 @@
     <div class="containerFluid headerBar">
         <nav class="navBar container80">
             <div class="logoContainer">
-                <img class="logo" src="/img/my notes.png" alt="" srcset="">
+                <img class="logo" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
                 <h3 class="logoText">
                     iBlog
                 </h3>
@@ -251,7 +254,7 @@
 
             <div class="adCode">
                 <video width="100%" height="auto" controls autoplay loop>
-                    <source src="/Get Your Website Designe Today.mp4" type="video/mp4">
+                    <source src="https://github.com/ckwebstudio/iblog.github.io/Get Your Website Designe Today.mp4" type="video/mp4">
 
                 </video>
             </div>
