--- a/single.html
+++ b/single.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iBlog Responsive Blog Templet</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/utils.css">
-    <link rel="stylesheet" href="css/media.css">
+    <link rel="stylesheet" href="css/media.css"> -->
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/utils.css">
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/style.css">
+    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/media.css">
 </head>
 
 <body>
@@ -17,7 +20,7 @@
     <div class="containerFluid headerBar">
         <nav class="navBar container80">
             <div class="logoContainer">
-                <img class="logo" src="/img/my notes.png" alt="" srcset="">
+                <img class="logo" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
                 <h3 class="logoText">
                     iBlog
                 </h3>
@@ -91,7 +94,7 @@
                 <!-- single comment and replay group -->
 
                 <div class="SingleComment">
-                    <img class="gravatarImg" src="/img/my notes.png" alt="" srcset="">
+                    <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
                     <div class="commentContentWrapper">
                         <div class="commentText">
                             <div class="commentAuther my2">
@@ -104,7 +107,7 @@
                         <!-- replay loop -->
                         <div class="reply">
 
-                            <img class="gravatarImg" src="/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
 
                             <div class="replyContentWrapper">
                                 <div class="replyText">
@@ -120,7 +123,7 @@
                         </div>
 
                         <div class="reply">
-                            <img class="gravatarImg" src="/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
                             <div class="replyContentWrapper">
                                 <div class="replyText">
                                     <div class="replyAuther my2">
@@ -138,7 +141,7 @@
                 <!-- single comment and replay group -->
                 <!-- single comment and replay group -->
                 <div class="SingleComment">
-                    <img class="gravatarImg" src="/img/my notes.png" alt="" srcset="">
+                    <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
                     <div class="commentContentWrapper">
                         <div class="commentText">
                             <div class="commentAuther my2">
@@ -151,7 +154,7 @@
                         <!-- replay loop -->
                         <div class="reply">
 
-                            <img class="gravatarImg" src="/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
 
                             <div class="replyContentWrapper">
                                 <div class="replyText">
