--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/utils.css">
     <link rel="stylesheet" href="css/media.css"> -->
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/utils.css">
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/style.css">
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/media.css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/utils.css" type="text/css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/media.css" type="text/css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="containerFluid headerBar">
         <nav class="navBar container80">
             <div class="logoContainer">
-                <img class="logo" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                <img class="logo" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
                 <h3 class="logoText">
                     iBlog
                 </h3>
@@ -254,7 +254,7 @@
 
             <div class="adCode">
                 <video width="100%" height="auto" controls autoplay loop>
-                    <source src="https://github.com/ckwebstudio/iblog.github.io/Get Your Website Designe Today.mp4" type="video/mp4">
+                    <source src="https://ckwebstudio.github.io/iblog.github.io/Get Your Website Designe Today.mp4" type="video/mp4">
 
                 </video>
             </div>
