--- a/single.html
+++ b/single.html
@@ -10,9 +10,9 @@
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="/css/utils.css">
     <link rel="stylesheet" href="css/media.css"> -->
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/utils.css">
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/style.css">
-    <link rel="stylesheet" href="https://github.com/ckwebstudio/iblog.github.io/css/media.css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/utils.css" type="text/css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://ckwebstudio.github.io/iblog.github.io/css/media.css" type="text/css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <div class="containerFluid headerBar">
         <nav class="navBar container80">
             <div class="logoContainer">
-                <img class="logo" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                <img class="logo" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
                 <h3 class="logoText">
                     iBlog
                 </h3>
@@ -37,7 +37,7 @@
 
         <div class="mainSection my2 bgLight">
 
-            <img class="featuredImage" src="/img/Server-Setup.jpg" alt="" srcset="">
+            <img class="featuredImage" src="https://ckwebstudio.github.io/iblog.github.io/img/Server-Setup.jpg" alt="" srcset="">
             <h1 class="postTitle my2">
                 Wellcome this our first post.
             </h1>
@@ -94,7 +94,7 @@
                 <!-- single comment and replay group -->
 
                 <div class="SingleComment">
-                    <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                    <img class="gravatarImg" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
                     <div class="commentContentWrapper">
                         <div class="commentText">
                             <div class="commentAuther my2">
@@ -107,7 +107,7 @@
                         <!-- replay loop -->
                         <div class="reply">
 
-                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
 
                             <div class="replyContentWrapper">
                                 <div class="replyText">
@@ -123,7 +123,7 @@
                         </div>
 
                         <div class="reply">
-                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
                             <div class="replyContentWrapper">
                                 <div class="replyText">
                                     <div class="replyAuther my2">
@@ -141,7 +141,7 @@
                 <!-- single comment and replay group -->
                 <!-- single comment and replay group -->
                 <div class="SingleComment">
-                    <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                    <img class="gravatarImg" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
                     <div class="commentContentWrapper">
                         <div class="commentText">
                             <div class="commentAuther my2">
@@ -154,7 +154,7 @@
                         <!-- replay loop -->
                         <div class="reply">
 
-                            <img class="gravatarImg" src="https://github.com/ckwebstudio/iblog.github.io/img/my notes.png" alt="" srcset="">
+                            <img class="gravatarImg" src="https://ckwebstudio.github.io/iblog.github.io/img/my notes.png" alt="" srcset="">
 
                             <div class="replyContentWrapper">
                                 <div class="replyText">
@@ -238,7 +238,7 @@
 
             <div class="adCode">
                 <video width="100%" height="auto" controls loop>
-                    <source src="/Get Your Website Designe Today.mp4" type="video/mp4">
+                    <source src="https://ckwebstudio.github.io/iblog.github.io/Get Your Website Designe Today.mp4" type="video/mp4">
 
                 </video>
             </div>
